Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Various upgrade fixes that stopped an upgrade from CPS 3.2.4.
- The member folder path got reset on any kind of import.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Add css class for comments display listed.