@@ -12,23 +12,14 @@
  <property name="filter_content_types">True</property>
  <property name="allowed_content_types">
   <element value="Section"/>
-  <element value="Chapter"/>
-  <element value="Glossary"/>
-  <element value="Book"/>
-  <element value="Press Release"/>
-  <element value="Flexible"/>
-  <element value="News Item"/>
-  <element value="GlossaryItem"/>
-  <element value="Page"/>
   <element value="Document"/>
-  <element value="Image"/>
   <element value="FAQ"/>
-  <element value="ZippedHtml"/>
-  <element value="Link"/>
   <element value="File"/>
-  <element value="FAQitem"/>
+  <element value="Glossary"/>
   <element value="ImageGallery"/>
-  <element value="EventDoc"/>
+  <element value="Link"/>
+  <element value="News Item"/>
+  <element value="ZippedHtml"/>
  </property>
  <property name="allow_discussion">False</property>
  <property name="cps_is_searchable">True</property>
