@@ -8,6 +8,8 @@ Bug fixes:
 ~~~~~~~~~~
 - Various upgrade fixes that stopped an upgrade from CPS 3.2.4.
 - The member folder path got reset on any kind of import.
+- Remove certain allowed portal types from Sections, as they were also removed
+  from Workspaces
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Add css class for comments display listed.
